--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,27 +6,25 @@ workflows:
     environment:
       vars:
         BUNDLE_ID: "com.cryptowallet.app"
-        XCODE_PROJECT: "CryptoWallet.xcodeproj"
         XCODE_SCHEME: "CryptoWallet"
       xcode: latest
-      cocoapods: default
+      swift: latest
     scripts:
-      - name: Use system default Ruby
+      - name: Generate Xcode project
         script: |
-          rbenv global system
-      - name: Install dependencies
-        script: |
-          if [ -f "Podfile" ]; then pod install; fi
+          swift package generate-xcodeproj
       - name: Build debug
         script: |
-          if [ -f "CryptoWallet.xcworkspace" ]; then
-            xcodebuild build -workspace "CryptoWallet.xcworkspace" -scheme "$XCODE_SCHEME" -configuration Debug -destination generic/platform=iOS
-          else
-            xcodebuild build -project "CryptoWallet.xcodeproj" -scheme "$XCODE_SCHEME" -configuration Debug -destination generic/platform=iOS
-          fi
+          xcodebuild -project CryptoWallet.xcodeproj -scheme "$XCODE_SCHEME" -configuration Debug -destination generic/platform=iOS build
+      - name: Run tests
+        script: |
+          swift test
     artifacts:
-      - build/Debug-iphoneos/*.app
+      - *.xcodeproj
+      - .build
+      - .swiftpm
       - /tmp/xcodebuild_logs/*.log
+      - *.test-report.html
     publishing:
       email:
         recipients:
@@ -39,26 +37,20 @@ workflows:
     environment:
       vars:
         BUNDLE_ID: "com.cryptowallet.app"
-        XCODE_PROJECT: "CryptoWallet.xcodeproj"
         XCODE_SCHEME: "CryptoWallet"
       xcode: latest
-      cocoapods: default
+      swift: latest
     scripts:
-      - name: Use system default Ruby
+      - name: Generate Xcode project
         script: |
-          rbenv global system
-      - name: Install dependencies
-        script: |
-          if [ -f "Podfile" ]; then pod install; fi
+          swift package generate-xcodeproj
       - name: Build release
         script: |
-          if [ -f "CryptoWallet.xcworkspace" ]; then
-            xcodebuild build -workspace "CryptoWallet.xcworkspace" -scheme "$XCODE_SCHEME" -configuration Release -destination generic/platform=iOS
-          else
-            xcodebuild build -project "CryptoWallet.xcodeproj" -scheme "$XCODE_SCHEME" -configuration Release -destination generic/platform=iOS
-          fi
+          xcodebuild -project CryptoWallet.xcodeproj -scheme "$XCODE_SCHEME" -configuration Release -destination generic/platform=iOS build
     artifacts:
-      - build/Release-iphoneos/*.app
+      - *.xcodeproj
+      - .build
+      - .swiftpm
       - /tmp/xcodebuild_logs/*.log
     publishing:
       email:
