--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -20,11 +20,10 @@ workflows:
         script: |
           swift test
     artifacts:
-      - *.xcodeproj
+      - CryptoWallet.xcodeproj
       - .build
       - .swiftpm
       - /tmp/xcodebuild_logs/*.log
-      - *.test-report.html
     publishing:
       email:
         recipients:
@@ -48,7 +47,7 @@ workflows:
         script: |
           xcodebuild -project CryptoWallet.xcodeproj -scheme "$XCODE_SCHEME" -configuration Release -destination generic/platform=iOS build
     artifacts:
-      - *.xcodeproj
+      - CryptoWallet.xcodeproj
       - .build
       - .swiftpm
       - /tmp/xcodebuild_logs/*.log
